--- a/MusicFiles/Resources/Strings.resx
+++ b/MusicFiles/Resources/Strings.resx
@@ -135,6 +135,9 @@
   <data name="ErrorNoDirectories" xml:space="preserve">
     <value>You have not selected any directory yet. Go to the settings menu.</value>
   </data>
+  <data name="ErrorNoMatches" xml:space="preserve">
+    <value>No matches found</value>
+  </data>
   <data name="ExpandInfo" xml:space="preserve">
     <value>Expand directories on load and refresh</value>
   </data>
