--- a/FileBrowser/Resources/Strings.nl.resx
+++ b/FileBrowser/Resources/Strings.nl.resx
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
-  <!-- 
+	<!-- 
     Microsoft ResX Schema 
     
     Version 2.0
@@ -59,137 +59,170 @@
             : using a System.ComponentModel.TypeConverter
             : and then encoded with base64 encoding.
     -->
-  <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
-    <xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
-    <xsd:element name="root" msdata:IsDataSet="true">
-      <xsd:complexType>
-        <xsd:choice maxOccurs="unbounded">
-          <xsd:element name="metadata">
-            <xsd:complexType>
-              <xsd:sequence>
-                <xsd:element name="value" type="xsd:string" minOccurs="0" />
-              </xsd:sequence>
-              <xsd:attribute name="name" use="required" type="xsd:string" />
-              <xsd:attribute name="type" type="xsd:string" />
-              <xsd:attribute name="mimetype" type="xsd:string" />
-              <xsd:attribute ref="xml:space" />
-            </xsd:complexType>
-          </xsd:element>
-          <xsd:element name="assembly">
-            <xsd:complexType>
-              <xsd:attribute name="alias" type="xsd:string" />
-              <xsd:attribute name="name" type="xsd:string" />
-            </xsd:complexType>
-          </xsd:element>
-          <xsd:element name="data">
-            <xsd:complexType>
-              <xsd:sequence>
-                <xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
-                <xsd:element name="comment" type="xsd:string" minOccurs="0" msdata:Ordinal="2" />
-              </xsd:sequence>
-              <xsd:attribute name="name" type="xsd:string" use="required" msdata:Ordinal="1" />
-              <xsd:attribute name="type" type="xsd:string" msdata:Ordinal="3" />
-              <xsd:attribute name="mimetype" type="xsd:string" msdata:Ordinal="4" />
-              <xsd:attribute ref="xml:space" />
-            </xsd:complexType>
-          </xsd:element>
-          <xsd:element name="resheader">
-            <xsd:complexType>
-              <xsd:sequence>
-                <xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
-              </xsd:sequence>
-              <xsd:attribute name="name" type="xsd:string" use="required" />
-            </xsd:complexType>
-          </xsd:element>
-        </xsd:choice>
-      </xsd:complexType>
-    </xsd:element>
-  </xsd:schema>
-  <resheader name="resmimetype">
-    <value>text/microsoft-resx</value>
-  </resheader>
-  <resheader name="version">
-    <value>2.0</value>
-  </resheader>
-  <resheader name="reader">
-    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </resheader>
-  <resheader name="writer">
-    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </resheader>
-  <data name="AddDirectory" xml:space="preserve">
-    <value>Map toevoegen</value>
+	<xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
+		<xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
+		<xsd:element name="root" msdata:IsDataSet="true">
+			<xsd:complexType>
+				<xsd:choice maxOccurs="unbounded">
+					<xsd:element name="metadata">
+						<xsd:complexType>
+							<xsd:sequence>
+								<xsd:element name="value" type="xsd:string" minOccurs="0" />
+							</xsd:sequence>
+							<xsd:attribute name="name" use="required" type="xsd:string" />
+							<xsd:attribute name="type" type="xsd:string" />
+							<xsd:attribute name="mimetype" type="xsd:string" />
+							<xsd:attribute ref="xml:space" />
+						</xsd:complexType>
+					</xsd:element>
+					<xsd:element name="assembly">
+						<xsd:complexType>
+							<xsd:attribute name="alias" type="xsd:string" />
+							<xsd:attribute name="name" type="xsd:string" />
+						</xsd:complexType>
+					</xsd:element>
+					<xsd:element name="data">
+						<xsd:complexType>
+							<xsd:sequence>
+								<xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
+								<xsd:element name="comment" type="xsd:string" minOccurs="0" msdata:Ordinal="2" />
+							</xsd:sequence>
+							<xsd:attribute name="name" type="xsd:string" use="required" msdata:Ordinal="1" />
+							<xsd:attribute name="type" type="xsd:string" msdata:Ordinal="3" />
+							<xsd:attribute name="mimetype" type="xsd:string" msdata:Ordinal="4" />
+							<xsd:attribute ref="xml:space" />
+						</xsd:complexType>
+					</xsd:element>
+					<xsd:element name="resheader">
+						<xsd:complexType>
+							<xsd:sequence>
+								<xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
+							</xsd:sequence>
+							<xsd:attribute name="name" type="xsd:string" use="required" />
+						</xsd:complexType>
+					</xsd:element>
+				</xsd:choice>
+			</xsd:complexType>
+		</xsd:element>
+	</xsd:schema>
+	<resheader name="resmimetype">
+		<value>text/microsoft-resx</value>
+	</resheader>
+	<resheader name="version">
+		<value>2.0</value>
+	</resheader>
+	<resheader name="reader">
+		<value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+	</resheader>
+	<resheader name="writer">
+		<value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+	</resheader>
+	<data name="AddDirectory" xml:space="preserve">
+    <value>Folder toevoegen</value>
   </data>
-  <data name="AddExtension" xml:space="preserve">
+	<data name="AddExtension" xml:space="preserve">
     <value>Extensie toevoegen</value>
   </data>
-  <data name="CollapseAll" xml:space="preserve">
+	<data name="CollapseAll" xml:space="preserve">
     <value>Inklappen</value>
   </data>
-  <data name="Colors" xml:space="preserve">
+	<data name="Colors" xml:space="preserve">
     <value>Kleuren</value>
   </data>
-  <data name="Directories" xml:space="preserve">
-    <value>Mappen</value>
+	<data name="Directories" xml:space="preserve">
+    <value>Folders</value>
   </data>
-  <data name="ErrorNoDirectories" xml:space="preserve">
-    <value>Je hebt nog geen mappen geselecteerd. Ga naar het instellingen menu.</value>
+	<data name="ErrorNoDirectories" xml:space="preserve">
+    <value>Je hebt nog geen folders geselecteerd. Ga naar het instellingen menu.</value>
   </data>
-  <data name="ErrorNoMatches" xml:space="preserve">
+	<data name="ErrorNoMatches" xml:space="preserve">
     <value>Geen bestanden gevonden</value>
   </data>
-  <data name="ExpandInfo" xml:space="preserve">
-    <value>Vouw mappen uit bij opstarten en hernieuwen</value>
+	<data name="ExpandInfo" xml:space="preserve">
+    <value>Vouw folders uit bij opstarten en hernieuwen</value>
   </data>
-  <data name="Extensions" xml:space="preserve">
+	<data name="Extensions" xml:space="preserve">
     <value>Extensies</value>
   </data>
-  <data name="HelpFour" xml:space="preserve">
+	<data name="HelpFour" xml:space="preserve">
     <value>Als het programma opnieuw opstart zal het automatisch de lijst hernieuwen</value>
   </data>
-  <data name="HelpOne" xml:space="preserve">
-    <value>Ga naar instellingen en voeg de mappen toe die je wilt scannen</value>
+	<data name="HelpOne" xml:space="preserve">
+    <value>Ga naar instellingen en voeg de folders toe die je wilt scannen</value>
   </data>
-  <data name="HelpThree" xml:space="preserve">
+	<data name="HelpThree" xml:space="preserve">
     <value>Verlaat het instellingenmenu en klik op "Hernieuwen". Dit zal een lijst genereren van alle bestanden die aan de extensies voldoen in de gespecifieerde mappen</value>
   </data>
-  <data name="HelpTwo" xml:space="preserve">
+	<data name="HelpTwo" xml:space="preserve">
     <value>Voeg de extensies toe van de bestanden die je wilt scannen</value>
   </data>
-  <data name="ListBackground" xml:space="preserve">
+	<data name="ListBackground" xml:space="preserve">
     <value>Lijst Achtergrond</value>
   </data>
-  <data name="ListForeground" xml:space="preserve">
+	<data name="ListForeground" xml:space="preserve">
     <value>Lijst Tekstkleur</value>
   </data>
-  <data name="MenuBackground" xml:space="preserve">
+	<data name="MenuBackground" xml:space="preserve">
     <value>Menu Achtergrond</value>
   </data>
-  <data name="MenuForeground" xml:space="preserve">
+	<data name="MenuForeground" xml:space="preserve">
     <value>Menu Tekstkleur</value>
   </data>
-  <data name="MenuHelp" xml:space="preserve">
+	<data name="MenuHelp" xml:space="preserve">
     <value>Hulp</value>
   </data>
-  <data name="MenuRefresh" xml:space="preserve">
+	<data name="MenuRefresh" xml:space="preserve">
     <value>Hernieuwen</value>
   </data>
-  <data name="MenuSettings" xml:space="preserve">
+	<data name="MenuSettings" xml:space="preserve">
     <value>Instellingen</value>
   </data>
-  <data name="RequiresRestart" xml:space="preserve">
+	<data name="RequiresRestart" xml:space="preserve">
     <value>Opnieuw opstarten vereist</value>
   </data>
-  <data name="Reset" xml:space="preserve">
+	<data name="Reset" xml:space="preserve">
     <value>Herstellen</value>
   </data>
-  <data name="Search" xml:space="preserve">
+	<data name="Search" xml:space="preserve">
     <value>Zoek</value>
   </data>
-  <data name="SelectLanguage" xml:space="preserve">
+	<data name="SelectLanguage" xml:space="preserve">
     <value>Selecteer taal</value>
   </data>
-  <data name="ShowAll" xml:space="preserve">
+	<data name="ShowAll" xml:space="preserve">
     <value>Uitvouwen</value>
   </data>
+	<data name="ErrorDirectoryNotFound" xml:space="preserve">
+		<value>Deze folder bestaat niet meer op je computer</value>
+	</data>
+	<data name="ArgumentExceptionPathFolder" xml:space="preserve">
+		<value>Het pad van de folder kan niet leeg zijn</value>
+	</data>
+	<data name="Delete" xml:space="preserve">
+		<value>Verwijderen</value>
+	</data>
+	<data name="DuplicateExtensionDescription" xml:space="preserve">
+		<value>Deze extensie zit al in de lijst</value>
+	</data>
+	<data name="DuplicateExtensionTitle" xml:space="preserve">
+		<value>Dubbele extensie</value>
+	</data>
+	<data name="DuplicateFolderDescription" xml:space="preserve">
+		<value>Deze folder zit al in de lijst</value>
+	</data>
+	<data name="DuplicateFolderTitle" xml:space="preserve">
+		<value>Dubbele folder</value>
+	</data>
+	<data name="InvalidExtensionEmpty" xml:space="preserve">
+		<value>De extensie kan niet leeg zijn</value>
+	</data>
+	<data name="InvalidExtensionTitle" xml:space="preserve">
+		<value>Ongeldige extensie</value>
+	</data>
+	<data name="InvalidLanguageDescription" xml:space="preserve">
+		<value>Een ongeldige taal werd geselecteerd</value>
+	</data>
+	<data name="InvalidLangugeTitle" xml:space="preserve">
+		<value>Ongeldige taal</value>
+	</data>
 </root>
