--- a/FileBrowser/Resources/Strings.resx
+++ b/FileBrowser/Resources/Strings.resx
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
-  <!-- 
+	<!-- 
     Microsoft ResX Schema 
     
     Version 2.0
@@ -59,137 +59,170 @@
             : using a System.ComponentModel.TypeConverter
             : and then encoded with base64 encoding.
     -->
-  <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
-    <xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
-    <xsd:element name="root" msdata:IsDataSet="true">
-      <xsd:complexType>
-        <xsd:choice maxOccurs="unbounded">
-          <xsd:element name="metadata">
-            <xsd:complexType>
-              <xsd:sequence>
-                <xsd:element name="value" type="xsd:string" minOccurs="0" />
-              </xsd:sequence>
-              <xsd:attribute name="name" use="required" type="xsd:string" />
-              <xsd:attribute name="type" type="xsd:string" />
-              <xsd:attribute name="mimetype" type="xsd:string" />
-              <xsd:attribute ref="xml:space" />
-            </xsd:complexType>
-          </xsd:element>
-          <xsd:element name="assembly">
-            <xsd:complexType>
-              <xsd:attribute name="alias" type="xsd:string" />
-              <xsd:attribute name="name" type="xsd:string" />
-            </xsd:complexType>
-          </xsd:element>
-          <xsd:element name="data">
-            <xsd:complexType>
-              <xsd:sequence>
-                <xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
-                <xsd:element name="comment" type="xsd:string" minOccurs="0" msdata:Ordinal="2" />
-              </xsd:sequence>
-              <xsd:attribute name="name" type="xsd:string" use="required" msdata:Ordinal="1" />
-              <xsd:attribute name="type" type="xsd:string" msdata:Ordinal="3" />
-              <xsd:attribute name="mimetype" type="xsd:string" msdata:Ordinal="4" />
-              <xsd:attribute ref="xml:space" />
-            </xsd:complexType>
-          </xsd:element>
-          <xsd:element name="resheader">
-            <xsd:complexType>
-              <xsd:sequence>
-                <xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
-              </xsd:sequence>
-              <xsd:attribute name="name" type="xsd:string" use="required" />
-            </xsd:complexType>
-          </xsd:element>
-        </xsd:choice>
-      </xsd:complexType>
-    </xsd:element>
-  </xsd:schema>
-  <resheader name="resmimetype">
-    <value>text/microsoft-resx</value>
-  </resheader>
-  <resheader name="version">
-    <value>2.0</value>
-  </resheader>
-  <resheader name="reader">
-    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </resheader>
-  <resheader name="writer">
-    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </resheader>
-  <data name="AddDirectory" xml:space="preserve">
+	<xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
+		<xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
+		<xsd:element name="root" msdata:IsDataSet="true">
+			<xsd:complexType>
+				<xsd:choice maxOccurs="unbounded">
+					<xsd:element name="metadata">
+						<xsd:complexType>
+							<xsd:sequence>
+								<xsd:element name="value" type="xsd:string" minOccurs="0" />
+							</xsd:sequence>
+							<xsd:attribute name="name" use="required" type="xsd:string" />
+							<xsd:attribute name="type" type="xsd:string" />
+							<xsd:attribute name="mimetype" type="xsd:string" />
+							<xsd:attribute ref="xml:space" />
+						</xsd:complexType>
+					</xsd:element>
+					<xsd:element name="assembly">
+						<xsd:complexType>
+							<xsd:attribute name="alias" type="xsd:string" />
+							<xsd:attribute name="name" type="xsd:string" />
+						</xsd:complexType>
+					</xsd:element>
+					<xsd:element name="data">
+						<xsd:complexType>
+							<xsd:sequence>
+								<xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
+								<xsd:element name="comment" type="xsd:string" minOccurs="0" msdata:Ordinal="2" />
+							</xsd:sequence>
+							<xsd:attribute name="name" type="xsd:string" use="required" msdata:Ordinal="1" />
+							<xsd:attribute name="type" type="xsd:string" msdata:Ordinal="3" />
+							<xsd:attribute name="mimetype" type="xsd:string" msdata:Ordinal="4" />
+							<xsd:attribute ref="xml:space" />
+						</xsd:complexType>
+					</xsd:element>
+					<xsd:element name="resheader">
+						<xsd:complexType>
+							<xsd:sequence>
+								<xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
+							</xsd:sequence>
+							<xsd:attribute name="name" type="xsd:string" use="required" />
+						</xsd:complexType>
+					</xsd:element>
+				</xsd:choice>
+			</xsd:complexType>
+		</xsd:element>
+	</xsd:schema>
+	<resheader name="resmimetype">
+		<value>text/microsoft-resx</value>
+	</resheader>
+	<resheader name="version">
+		<value>2.0</value>
+	</resheader>
+	<resheader name="reader">
+		<value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+	</resheader>
+	<resheader name="writer">
+		<value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+	</resheader>
+	<data name="AddDirectory" xml:space="preserve">
     <value>Add Directory</value>
   </data>
-  <data name="AddExtension" xml:space="preserve">
+	<data name="AddExtension" xml:space="preserve">
     <value>Add Extension</value>
   </data>
-  <data name="CollapseAll" xml:space="preserve">
+	<data name="ArgumentExceptionPathFolder" xml:space="preserve">
+    <value>Path of the directory cannot be empty.</value>
+  </data>
+	<data name="CollapseAll" xml:space="preserve">
     <value>Collapse</value>
   </data>
-  <data name="Colors" xml:space="preserve">
+	<data name="Colors" xml:space="preserve">
     <value>Colors</value>
   </data>
-  <data name="Directories" xml:space="preserve">
+	<data name="Delete" xml:space="preserve">
+    <value>Delete</value>
+  </data>
+	<data name="Directories" xml:space="preserve">
     <value>Directories</value>
   </data>
-  <data name="ErrorNoDirectories" xml:space="preserve">
+	<data name="DuplicateExtensionDescription" xml:space="preserve">
+    <value>This extension already exists in the list</value>
+  </data>
+	<data name="DuplicateExtensionTitle" xml:space="preserve">
+    <value>Duplicate extension</value>
+  </data>
+	<data name="DuplicateFolderDescription" xml:space="preserve">
+    <value>This folder already exists in the list</value>
+  </data>
+	<data name="DuplicateFolderTitle" xml:space="preserve">
+    <value>Duplicate Folder</value>
+  </data>
+	<data name="ErrorDirectoryNotFound" xml:space="preserve">
+    <value>This directory does not exist anymore on your computer</value>
+  </data>
+	<data name="ErrorNoDirectories" xml:space="preserve">
     <value>You have not selected any directory yet. Go to the settings menu.</value>
   </data>
-  <data name="ErrorNoMatches" xml:space="preserve">
+	<data name="ErrorNoMatches" xml:space="preserve">
     <value>No matches found</value>
   </data>
-  <data name="ExpandInfo" xml:space="preserve">
+	<data name="ExpandInfo" xml:space="preserve">
     <value>Expand directories on load and refresh</value>
   </data>
-  <data name="Extensions" xml:space="preserve">
+	<data name="Extensions" xml:space="preserve">
     <value>Extensions</value>
   </data>
-  <data name="HelpFour" xml:space="preserve">
+	<data name="HelpFour" xml:space="preserve">
     <value>On program startup, the list will automatically refresh</value>
   </data>
-  <data name="HelpOne" xml:space="preserve">
+	<data name="HelpOne" xml:space="preserve">
     <value>Go to settings and add the directories you want this program to scan</value>
   </data>
-  <data name="HelpThree" xml:space="preserve">
+	<data name="HelpThree" xml:space="preserve">
     <value>When done, exit the settings menu and click on "Refresh". This will generate a list of all the files that match the extensions in the specified folders</value>
   </data>
-  <data name="HelpTwo" xml:space="preserve">
+	<data name="HelpTwo" xml:space="preserve">
     <value>Add the extensions of the files you want to scan</value>
   </data>
-  <data name="ListBackground" xml:space="preserve">
+	<data name="InvalidExtensionEmpty" xml:space="preserve">
+    <value>The extension cannot be empty</value>
+  </data>
+	<data name="InvalidExtensionTitle" xml:space="preserve">
+    <value>Invalid extension</value>
+  </data>
+	<data name="InvalidLanguageDescription" xml:space="preserve">
+    <value>An invalid language was selected</value>
+  </data>
+	<data name="InvalidLangugeTitle" xml:space="preserve">
+    <value>Invalid Language</value>
+  </data>
+	<data name="ListBackground" xml:space="preserve">
     <value>List Background</value>
   </data>
-  <data name="ListForeground" xml:space="preserve">
+	<data name="ListForeground" xml:space="preserve">
     <value>List Text</value>
   </data>
-  <data name="MenuBackground" xml:space="preserve">
+	<data name="MenuBackground" xml:space="preserve">
     <value>Menu Background</value>
   </data>
-  <data name="MenuForeground" xml:space="preserve">
+	<data name="MenuForeground" xml:space="preserve">
     <value>Menu Text</value>
   </data>
-  <data name="MenuHelp" xml:space="preserve">
+	<data name="MenuHelp" xml:space="preserve">
     <value>Help</value>
   </data>
-  <data name="MenuRefresh" xml:space="preserve">
+	<data name="MenuRefresh" xml:space="preserve">
     <value>Refresh</value>
   </data>
-  <data name="MenuSettings" xml:space="preserve">
+	<data name="MenuSettings" xml:space="preserve">
     <value>Settings</value>
   </data>
-  <data name="RequiresRestart" xml:space="preserve">
+	<data name="RequiresRestart" xml:space="preserve">
     <value>Requires restart</value>
   </data>
-  <data name="Reset" xml:space="preserve">
+	<data name="Reset" xml:space="preserve">
     <value>Reset</value>
   </data>
-  <data name="Search" xml:space="preserve">
+	<data name="Search" xml:space="preserve">
     <value>Search</value>
   </data>
-  <data name="SelectLanguage" xml:space="preserve">
+	<data name="SelectLanguage" xml:space="preserve">
     <value>Select Language</value>
   </data>
-  <data name="ShowAll" xml:space="preserve">
+	<data name="ShowAll" xml:space="preserve">
     <value>Show</value>
   </data>
 </root>
